objects/LLC_BI__Automated_Booking_Status__c.object
<CustomObject>
    <description>This object stores Automated Booking statuses, which indicate how the institution&apos;s core system stored Salesforce records.</description>
    <fields>
        <fullName>LLC_BI__Action__c</fullName>
        <description>Action</description>
        <label>Action</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__EAL_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the External Application Lookup table</description>
        <label>External Application Lookup</label>
        <referenceTo>LLC_BI__External_Application_Lookup__c</referenceTo>
        <relationshipLabel>Automated Booking Statuses</relationshipLabel>
        <relationshipName>Automated_Booking_Statuses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Booking Status that was used in creating this Booking Status.</description>
        <label>Parent Booking Status</label>
        <referenceTo>LLC_BI__Automated_Booking_Status__c</referenceTo>
        <relationshipLabel>Child Statuses</relationshipLabel>
        <relationshipName>Child_Statuses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Record_Id__c</fullName>
        <description>Id of the SObject that is having an Id reserved or being booked.</description>
        <label>Record Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Status_Code__c</fullName>
        <description>Overall Status of the reserve or book request</description>
        <inlineHelpText>Overall Status of the reserve or book request</inlineHelpText>
        <label>Status Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Status_Summary__c</fullName>
        <description>--DEPRECATED-- Replaced by LLC_BI__Summary__c</description>
        <label>-D Status Summary</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Summary__c</fullName>
        <description>Detailed overall status of the reserve or book request</description>
        <label>Summary</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Transaction_Id__c</fullName>
        <description>Transaction log Id</description>
        <label>Transaction Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Automated Booking Status</label>
    <nameField>
        <label>Category</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Automated Booking Statuses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>